--- a/positionstyles.css
+++ b/positionstyles.css
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: 1fr, 1fr;
   justify-items: center;
+  grid-gap: 20px;
 }
 .red1 {
   width: 100px;
@@ -14,12 +15,12 @@
 }
 .green1 {
   width: 200px;
-  height: 100px;
+  height: 200px;
   background-color: green;
 }
 .yellow1 {
   width: 200px;
-  height: 100px;
+  height: 200px;
   background-color: gold;
 }
 .blue1 {
