--- a/positionstyles.css
+++ b/positionstyles.css
@@ -7,7 +7,6 @@
   grid-gap: 20px;
 }
 .red1 {
-  width: 100px;
   height: 100px;
   background-color: red;
   width: 100%;
@@ -24,7 +23,6 @@
   background-color: gold;
 }
 .blue1 {
-  width: 100px;
   height: 100px;
   background-color: blue;
   width: 100%;
@@ -43,40 +41,50 @@
   width: 100px;
   height: 100px;
   background-color: green;
+  margin-top: -50px;
+  margin-left: 50px;
 }
 .yellow2 {
   width: 100px;
   height: 100px;
   background-color: gold;
+  margin-top: -50px;
+  margin-left: 100px;
 }
 .blue2 {
   width: 100px;
   height: 100px;
   background-color: blue;
+  margin-top: -50px;
+  margin-left: 150px;
 }
 /* Activity 3 styles */
 .content3 {
-  /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+  column-gap: 80px;
 }
 .red3 {
-  width: 100px;
   height: 100px;
   background-color: red;
+  width: 100%;
+  grid-column: 1/3;
 }
 .green3 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   background-color: green;
 }
 .yellow3 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   background-color: gold;
 }
 .blue3 {
-  width: 100px;
   height: 100px;
   background-color: blue;
+  width: 100%;
+  grid-column: 1/3;
 }
 /* Activity 4 styles */
 .content4 {
