--- a/positionstyles.css
+++ b/positionstyles.css
@@ -90,75 +90,100 @@
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .red4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: red;
+  grid-row: 1/4;
 }
 .green4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: green;
 }
 .yellow4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: gold;
 }
 .blue4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: blue;
 }
 /* Activity 5 styles */
 .content5 {
   /* This is the parent of the activity 5 boxes. */
-  height: 400px;
+  height: auto;
 }
 .red5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: red;
 }
 .green5 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: green;
+  float: left;
 }
 .yellow5 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 250px;
   background-color: gold;
 }
 .blue5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: blue;
 }
 /* Activity 6 styles */
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  height: 600px;
+  width: 600px;
+}
+.content6 div {
+  width: 100%;
+  height: 100%;
 }
 .red6 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: red;
+  grid-column: 1/5;
+  grid-row: 1/3;
+  z-index: 0;
 }
 .green6 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: green;
+  grid-column: 1/3;
+  grid-row: 5/7;
+  z-index: 3;
 }
 .yellow6 {
   width: 100px;
   height: 100px;
   background-color: gold;
+  grid-column: 5/7;
+  grid-row: 3/7;
+  z-index: 4;
 }
 .blue6 {
   width: 100px;
   height: 100px;
   background-color: blue;
+  grid-column: 2/6;
+  grid-row: 2/6;
+  z-index: 1;
 }
 
 /* Do not make any changes below here */
