--- a/rafting/styles/style.css
+++ b/rafting/styles/style.css
@@ -9,12 +9,24 @@ nav a {
   text-decoration: none;
   padding: 35px;
 }
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
 #hero-img {
   width: 100%;
 }
-#hero-msg h1,
-#hero-msg h4 {
+#hero-msg {
   text-align: center;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
 }
 .button-box {
   text-align: center;
@@ -25,6 +37,8 @@ main section {
 #background {
   height: 725px;
   background-color: #4e878c;
+  grid-column: 1/11;
+  grid-row: 4/9;
 }
 body {
   background-color: #f4fffd;
@@ -35,6 +49,9 @@ body {
 header {
   background-color: #4e878c;
   margin: 0;
+  display: grid;
+  grid-template-columns: 150px auto;
+  opacity: 85%;
 }
 nav a:hover {
   background-color: #f4fffd;
@@ -64,6 +81,9 @@ nav a:hover {
   color: #f4fffd;
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #161c1c;
 }
 footer {
   background-color: #4e878c;
@@ -71,16 +91,23 @@ footer {
   font-size: 1.2em;
   padding: 25px 50px;
   margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .home-title {
-  color: #4e878c;
+  color: #f4fffd;
   font-family: "Shadows Into Light Two", Verdana, sans-serif;
   font-size: 2em;
   margin-top: 10px;
 }
+.home-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
 .h4 {
-  color: #eb5e28;
+  color: #f4fffd;
   font-family: "Oswald", Verdana, sans-serif;
 }
 
@@ -110,6 +137,11 @@ footer p a:hover {
   width: 80px;
   padding-top: 5px;
 }
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
 .icon {
   width: 80px;
   padding-top: 10px;
@@ -123,9 +155,86 @@ footer p a:hover {
 .rapids-card {
   margin: 200px 0;
 }
-.card-img {
+.card-img,
+.mountains {
   border: 10px solid #4e878c;
+  width: 100%;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #161c1c;
+}
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
 }
 main section img {
   box-sizing: border-box;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+.rivers-card {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.camping-card {
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+.rapids-card {
+  grid-column: 8/10;
+  grid-row: 2/3;
+}
+.mountains {
+  width: 100%;
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #161c1c;
+}
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+  nav,
+  footer {
+    flex-direction: column;
+  }
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+  #hero {
+    margin-top: 0;
+  }
+  #hero-msg {
+    margin-top: 0;
+  }
+  #hero-msg h4 {
+    display: none;
+  }
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+  #background {
+    display: none;
+  }
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 25px;
+  }
 }
