--- a/rafting/styles/style.css
+++ b/rafting/styles/style.css
@@ -75,6 +75,10 @@ nav a:hover {
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 18px;
 }
+footer a:hover {
+  background-color: #4e878c;
+  color: #f4fffd;
+}
 .msg {
   font-family: "Shadows Into Light Two", Verdana, sans-serif;
   background-color: #4e878c;
@@ -115,6 +119,12 @@ footer {
   color: #4e878c;
   font-family: "Oswald", Verdana, sans-serif;
 }
+.h6 {
+  font-family: "Shadows Into Light Two", Verdana, sans-serif;
+  color: black;
+  font-size: 1.5em;
+  text-align: center;
+}
 .msg p {
   color: white;
   font-size: 0.8em;
@@ -123,15 +133,6 @@ footer {
 footer a {
   color: #f4fffd;
   text-decoration: none;
-}
-footer a:hover {
-  color: #eb5e28;
-}
-footer p {
-  color: #f4fffd;
-}
-footer p a:hover {
-  text-decoration: underline;
 }
 .logo {
   width: 80px;
@@ -192,6 +193,44 @@ nav {
   grid-row: 5/8;
   box-shadow: 5px 5px 10px #161c1c;
 }
+.img-background {
+  border: 10px solid #4e878c;
+  width: 30%;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #161c1c;
+}
+.rate-grid {
+  margin-left: 2em;
+  margin-right: 2em;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: (5, 1fr);
+}
+.dates {
+  background-color: #4e878c;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  color: #f4fffd;
+}
+.gcthree {
+  grid-row: 1/2;
+}
+.gcsix {
+  grid-row: 2/3;
+  padding-top: 45px;
+}
+.salmon {
+  grid-row: 3/4;
+  padding-top: 45px;
+}
+.deso {
+  grid-row: 4/5;
+  padding-top: 45px;
+}
+.bookgrid {
+  grid-column: 10/11;
+}
+
 @media screen and (max-width: 900px) {
   #hero,
   .home-grid {
