--- a/tetonpartyco/styles/site-plan.css
+++ b/tetonpartyco/styles/site-plan.css
@@ -19,9 +19,9 @@ Fonts are separated by a | */
   --paragraph-color-on-color: white;
   --paragraph-background-color: #f4acb7;
   --nav-link-color: #ffffff;
-  --nav-background-color: #e6972b;
+  --nav-background-color: #f4acb7;
   --nav-hover-link-color: #f6cc5d;
-  --nav-hover-background-color: #e55f5c;
+  --nav-hover-background-color: #f4acb7;
 }
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
