--- a/rafting/styles/style.css
+++ b/rafting/styles/style.css
@@ -200,11 +200,9 @@ nav {
   box-shadow: 5px 5px 10px #161c1c;
 }
 .rate-grid {
-  margin-left: 2em;
-  margin-right: 2em;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: (5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(8, 1fr);
 }
 .dates {
   background-color: #4e878c;
@@ -213,22 +211,39 @@ nav {
   color: #f4fffd;
 }
 .gcthree {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+.gcthree-info {
+  grid-column: 3/5;
   grid-row: 1/2;
 }
 .gcsix {
-  grid-row: 2/3;
-  padding-top: 45px;
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+.gcsix-info {
+  grid-column: 3/5;
+  grid-row: 3/4;
 }
 .salmon {
-  grid-row: 3/4;
-  padding-top: 45px;
+  grid-column: 1/3;
+  grid-row: 4/5;
 }
 .deso {
-  grid-row: 4/5;
+  grid-column: 1/3;
+  grid-row: 6/7;
   padding-top: 45px;
 }
 .bookgrid {
   grid-column: 10/11;
+}
+.ratesheader {
+  font-family: "Shadows Into Light Two", Verdana, sans-serif;
+  color: black;
+  font-size: 1.5em;
+  grid-column: 1px / 3px;
+  grid-row: 1/2;
 }
 
 @media screen and (max-width: 900px) {
