--- a/tetonpartyco/styles/styles.css
+++ b/tetonpartyco/styles/styles.css
@@ -35,10 +35,55 @@ nav a {
   padding: 10px;
   justify-content: center;
   font-size: 1.5em;
+  font-family: Garamond;
 }
-nav a:hover {
+nav a:hover,
+.dropdown-content a:hover {
   background-color: #f4fffd;
   color: #f6cc5d;
+}
+/* Dropdown Button */
+.dropbtn {
+  background-color: #f4acb7;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-family: Garamond;
+  font-size: 1.5em;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 16px;
+  font-size: 1.25em;
+  text-decoration: none;
+  font-family: garamond;
+  display: block;
+}
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #ffffff;
+  color: #e6972b;
 }
 #hero {
   display: grid;
