--- a/tetonpartyco/styles/styles.css
+++ b/tetonpartyco/styles/styles.css
@@ -40,7 +40,7 @@ nav a {
 nav a:hover,
 .dropdown-content a:hover {
   background-color: #f4fffd;
-  color: #f6cc5d;
+  color: #e6972b;
 }
 /* Dropdown Button */
 .dropbtn {
