--- a/tetonpartyco/styles/styles.css
+++ b/tetonpartyco/styles/styles.css
@@ -3,46 +3,48 @@
   max-width: 1600px;
   margin: 1 auto;
 }
-.home-grid {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-}
+/*header css*/
 header {
   background-color: #f4acb7;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 150px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  height: 140px;
+}
+.logo {
+  width: 125px;
+}
+.navhead {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 .home-title {
   color: #f4fffd;
   font-family: Amatic SC, PT Serif, Lato;
   font-size: 4em;
-  margin-top: 30px;
-  margin: 0 auto;
-  padding-top: 25px;
 }
 nav {
-  margin: 0 auto;
   display: flex;
-  justify-content: center;
-  padding-bottom: 35px;
+  gap: 18px;
 }
 nav a {
-  margin: 0 auto;
-  text-align: center;
   color: #f4fffd;
   text-decoration: none;
   padding: 10px;
-  justify-content: center;
   font-size: 1.5em;
-  font-family: Garamond;
 }
 nav a:hover,
 .dropdown-content a:hover {
   background-color: #f4fffd;
   color: #e6972b;
 }
-/* Dropdown Button */
+.offset {
+  width: 125px;
+}
 .dropbtn {
   background-color: #f4acb7;
   color: white;
@@ -51,14 +53,10 @@ nav a:hover,
   font-family: Garamond;
   font-size: 1.5em;
 }
-
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
 }
-
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -67,7 +65,6 @@ nav a:hover,
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-/* Links inside the dropdown */
 .dropdown-content a {
   color: black;
   padding: 16px;
@@ -76,95 +73,73 @@ nav a:hover,
   font-family: garamond;
   display: block;
 }
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: #ffffff;
   color: #e6972b;
 }
-#hero {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  margin-top: 100px;
+/* body */
+.homemain {
+  display: flex;
+  padding: 20px;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
-#hero-img {
-  width: 100%;
-  grid-row: 2/3;
-}
-#welcome {
-  text-align: center;
-  grid-column: 2/3;
-  grid-row: 1/2;
-  margin-top: 25px;
+.welcome {
   color: #e55f5c;
-  font-family: Lato, Verdana, Helvetica;
-  font-size: 1em;
-}
-.review {
-  background: #e55f5c;
-  color: #ffffff;
-  font-family: "Oswald", Verdana, sans-serif;
+  font-family: Amatic SC, Verdana, sans-serif;
+  font-size: 2.5em;
+  padding: 20px;
   text-align: center;
 }
-.review-p {
-  color: ;
-}
+/*footer*/
 footer {
   background-color: #e6972b;
   color: #f4fffd;
   font-size: 1.2em;
-  padding: 25px 50px;
-  margin-top: 200px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 .profile {
   height: 350px;
   border-radius: 50%;
 }
-#aboutme {
-  grid-template-columns: 1fr 3fr;
+.aboutme {
+  padding: 40px;
+  display: flex;
 }
-.bio {
-  grid-column: 2/3;
+/*Reviews CSS*/
+.review-header {
+  padding: 10px;
+  color: #e55f5c;
+  font-family: Amatic SC, Verdana, sans-serif;
+  text-align: center;
+  font-size: 2.5em;
 }
-.logo {
-  width: 100px;
-  padding-top: 5px;
+.revp {
+  background-color: #e55f5c;
+  color: white;
+  font-size: 1.25em;
+  text-align: center;
+  padding: 20px;
 }
-#logo_link {
-  padding-top: 5px;
-  justify-self: center;
-  align-self: center;
+.photos {
+  display: flex;
+  height: 425px;
+  padding: 35px;
+  justify-content: space-between;
 }
-xs @media screen and (max-width: 900px) {
-  #hero,
-  .home-grid {
-    display: block;
-    height: auto;
-  }
-  nav,
-  footer {
-    flex-direction: column;
-  }
-  nav a {
-    display: block;
-    padding: 15px;
-  }
-  #hero {
-    margin-top: 0;
-  }
-  #hero-msg {
-    margin-top: 0;
-  }
-  #hero-msg h4 {
-    display: none;
-  }
-  footer {
-    margin-top: 25px;
-  }
+.reviews {
+  display: flex;
+  justify-content: space-between;
+  column-span: 425px;
+  padding-bottom: 35px;
+  padding-inline: 35px;
+}
+.rpara {
+  width: 420px;
+  text-align: center;
+  font-size: 1.5em;
 }
