--- a/tetonpartyco/styles/site-plan.css
+++ b/tetonpartyco/styles/site-plan.css
@@ -6,22 +6,20 @@ Fonts are separated by a | */
 :root {
   --primary-color: #f4acb7;
   --secondary-color: #ffffff;
-  --accent1-color: #f6cc5d;
-  --accent2-color: #e6972b;
-  --accent3-color: #e55f5c;
+  --accent1-color: #e6972b;
 
   --heading-font: "Amatic SC, PT Serif, Lato";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --paragraph-font: Serif, Tahoma, verdana;
 
-  --headline-color-on-white: #e55f5c;
+  --headline-color-on-white: #e6972b;
   --headline-color-on-color: white;
-  --paragraph-color-on-white: #000000;
+  --paragraph-color-on-white: #f4acb7;
   --paragraph-color-on-color: white;
   --paragraph-background-color: #f4acb7;
   --nav-link-color: #ffffff;
   --nav-background-color: #f4acb7;
-  --nav-hover-link-color: #f6cc5d;
-  --nav-hover-background-color: #f4acb7;
+  --nav-hover-link-color: #e6972b;
+  --nav-hover-background-color: white;
 }
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
@@ -91,13 +89,7 @@ p {
   background-color: #ffffff;
 }
 .accent1 {
-  background-color: #f6cc5d;
-}
-.accent2 {
   background-color: #e6972b;
-}
-.accent3 {
-  background-color: #e55f5c;
 }
 
 p.colored {
