--- a/tetonpartyco/styles/styles.css
+++ b/tetonpartyco/styles/styles.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Oswald&family=Shadows+Into+Light+Two&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Carrois+Gothic+SC&family=Handlee&family=M+PLUS+1p:wght@300;400&display=swap");
 #content {
   max-width: 1600px;
-  margin: 1 auto;
 }
 /*header css*/
 header {
@@ -20,12 +19,13 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  padding-top: 45px;
 }
 .home-title {
   color: #f4fffd;
-  font-family: Amatic SC, PT Serif, Lato;
-  font-size: 4em;
+  font-family: "Amatic SC", Serif, Tahoma;
+  font-size: 2.5em;
+  font-weight: 400;
 }
 nav {
   display: flex;
@@ -50,7 +50,6 @@ nav a:hover,
   color: white;
   border: none;
   padding: 10px;
-  font-family: Garamond;
   font-size: 1.5em;
 }
 .dropdown {
@@ -70,7 +69,6 @@ nav a:hover,
   padding: 16px;
   font-size: 1.25em;
   text-decoration: none;
-  font-family: garamond;
   display: block;
 }
 .dropdown:hover .dropdown-content {
@@ -80,61 +78,105 @@ nav a:hover,
   background-color: #ffffff;
   color: #e6972b;
 }
-/* body */
-.homemain {
-  display: flex;
-  padding: 20px;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
+/* hero */
+.herogrid {
+  display: grid;
+  grid-template-columns: 100px 1fr 100px;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  max-height: 800px;
+}
+.hero {
+  height: auto;
+  width: 100%;
+  grid-column: 2/3;
+  grid-row: 1/4;
 }
 .welcome {
-  color: #e55f5c;
-  font-family: Amatic SC, Verdana, sans-serif;
+  color: #e6972b;
+  font-family: "Amatic SC", Serif, Tahoma;
   font-size: 2.5em;
-  padding: 20px;
+  font-weight: 500;
+  padding: 10px;
   text-align: center;
+  max-width: 900px;
+  margin: 0 auto;
 }
+.revback {
+  background-color: #f4acb7;
+  opacity: 0.8;
+  height: 130px;
+  z-index: 1;
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+.revp {
+  color: white;
+  font-size: 1.5em;
+  font-family: Serif, Tahoma;
+  text-align: center;
+  padding-inline: 40px;
+  grid-column: 2/3;
+  grid-row: 4/5;
+  z-index: 2;
+}
+
 /*footer*/
 footer {
   background-color: #e6972b;
-  color: #f4fffd;
+  color: white;
   font-size: 1.2em;
 }
+.footgrid {
+  display: grid;
+  grid-template-columns: 199.2px 1fr 1fr 1fr;
+  grid-template-rows: 100px 50px 50px;
+  padding: 15px;
+}
 .profile {
-  height: 350px;
+  height: 200px;
   border-radius: 50%;
+  grid-column: 1/2;
 }
 .aboutme {
-  padding: 40px;
-  display: flex;
+  grid-column: 2/6;
+  padding-left: 40px;
+  font-size: 1.45em;
+  font-family: "Amatic SC", Serif, Tahoma;
+  font-weight: 600;
+  text-shadow: 0.5px 0.5px #898989;
+}
+.copyright {
+  grid-column: 4/6;
+  font-size: 0.75em;
+  grid-row: 3/4;
+  justify-self: end;
+}
+.insta {
+  justify-self: end;
+  grid-column: 5/6;
+  grid-row: 4/5;
+}
+.site {
+  grid-column: 4/5;
+  grid-row: 4/5;
+  justify-self: end;
+  font-size: 0.75em;
+  padding-right: 15px;
+  color: white;
+  text-decoration: none;
 }
 /*Reviews CSS*/
-.review-header {
-  padding: 10px;
-  color: #e55f5c;
-  font-family: Amatic SC, Verdana, sans-serif;
-  text-align: center;
-  font-size: 2.5em;
-}
-.revp {
-  background-color: #e55f5c;
-  color: white;
-  font-size: 1.25em;
-  text-align: center;
-  padding: 20px;
-}
 .photos {
   display: flex;
   height: 425px;
-  padding: 35px;
+  padding-left: 35px;
+  padding-right: 35px;
   justify-content: space-between;
 }
 .reviews {
   display: flex;
   justify-content: space-between;
-  column-span: 425px;
+  column-span: inherit;
   padding-bottom: 35px;
   padding-inline: 35px;
 }
@@ -142,4 +184,28 @@ footer {
   width: 420px;
   text-align: center;
   font-size: 1.5em;
+  color: #f4acb7;
+  font-family: Serif, Tahoma;
+  text-shadow: 0.5px 0.5px #ded6cc;
+}
+/*faq*/
+.faqgrid {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 40px;
+  row-gap: 40px;
+  column-gap: 40px;
+}
+.icons {
+  grid-column: 1/3;
+  justify-self: center;
+  place-self: center;
+}
+.color {
+  background-color: #f4acb7;
+  grid-column: 2/3;
+  color: white;
+  padding: 40px;
+  font-size: 1.25em;
 }
